and starts the application. This includes special support for the
UTF-8-Isabelle encoding and the corresponding Isabelle fonts.

* Command-line tools "isabelle electron" and "isabelle node" provide
access to the underlying technologies of VSCodium, for use in other
applications. This essentially provides a freely programmable Chromium
browser engine that works uniformly on all platforms.


*** HOL ***

* Rule split_of_bool_asm is not split any longer, analogously to
split_if_asm.  INCOMPATIBILITY.

* Theory "HOL.Bit_Operations": rule bit_0 is not default [simp] any
longer. INCOMPATIBILITY.

* Theory "HOL.Relation": Added lemmas asymp_less and asymp_greater to
  type class preorder.

* Theory "HOL-Library.Multiset":
  - Consolidated operation and fact names.
        multp ~> multp_code
        multeqp ~> multeqp_code
        multp_cancel_add_mset ~> multp_cancel_add_mset0
        multp_cancel_add_mset0[simplified] ~> multp_cancel_add_mset
        multp_code_iff ~> multp_code_iff_mult
        multeqp_code_iff ~> multeqp_code_iff_reflcl_mult
    Minor INCOMPATIBILITY.
  - Moved mult1_lessE out of preorder type class and add explicit
    assumption. Minor INCOMPATIBILITY.
  - Added predicate multp equivalent to set mult. Reuse name previously
    used for what is now called multp_code. Minor INCOMPATIBILITY.
  - Lifted multiple lemmas from mult to multp.
  - Redefined less_multiset to be based on multp. INCOMPATIBILITY.

* Sledgehammer:
  - Redesigned multithreading to provide more fine grained prover schedules.
    The binary option 'slice' has been replaced by a numeric value 'slices'
    indicating the number of desired slices. Stronger provers can now be run by
    more than one thread simultaneously. The new option 'max_proofs' controls
    the number of proofs shown. INCOMPATIBILITY.
  - Introduced sledgehammer_outcome data type and changed return type of ML
    function Sledgehammer.run_sledgehammer from "bool * (string * string list)"